# travel-app-mcp

./: .gitignore  .replit  package.json  populate_sheets.py  pyproject.toml  replit.md
attached_assets/: Pasted-09-44-22-717-POST-https-001e94dd-e6da-4d4f-a8f3-9c2be4c0ce40-00-10oztkjeifeig-worf-replit-dev-mcp-1763099349559_1763099349561.txt  Pasted-All-MCP-tools-should-use-the-existing-Pydantic-data-models-User-Booking-FlightBooking-HotelB-1762697884027_1762697884028.txt  Pasted-Project-Overview-We-are-building-a-full-stack-travel-booking-application-that-allows-users-to-boo-1762690295344_1762690295345.txt  Pasted-erDiagram-USERS-AUTH-User-UUID-id-PK-string-email--1762690207178_1762690207179.txt
backend/: auth.py  auth_sheets.py  models.py  server.py  sheets_client.py
backend/services/: auth_sync.py
frontend/: vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Icons.jsx  Navbar.css  Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Auth.css  Home.css  Home.jsx  Login.jsx  Register.jsx
frontend/src/utils/: auth.js
